@@ -1,3 +1,8 @@
+2009-12-22  Jason Merrill  <jason@redhat.com>
+
+	PR c++/42331
+	* typeck.c (cp_build_modify_expr): Fix thinko.
+
 2009-12-21  Jason Merrill  <jason@redhat.com>
 
 	* mangle.c (write_member_name): Move abi-version=1 code back to...
